<resources>
    <string name="app_name">Shopping</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_facebook_deep_linking">FacebookDeepLinkingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">FACEBOOK DEEPLINK</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_facebook">"Facebook account found"</string>
    <string name="login_google">"Google account found"</string>
    <string name="login_app">"Account found"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_products">Products</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_configs">Configs</string>
    <string name="menu_logout">Logout</string>
</resources>