<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".presentation.activities.LoginActivity">

    <EditText
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideMidStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/labelOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="OR"
        app:layout_constraintEnd_toEndOf="@id/guideMidEnd"
        app:layout_constraintStart_toStartOf="@id/guideMidStart"
        app:layout_constraintTop_toBottomOf="@id/login" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideMidEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/labelOr"
        app:layout_constraintEnd_toEndOf="@id/guideMidStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/labelOr" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/labelOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideMidEnd"
        app:layout_constraintTop_toTopOf="@id/labelOr" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#1877F2"
        android:text="Login with Facebook"
        app:icon="@drawable/ic_facebook"
        app:iconSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/labelOr" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#EA4335"
        android:text="Login with Google"
        app:icon="@drawable/ic_google"
        app:iconSize="24dp"
        app:layout_constraintTop_toBottomOf="@id/facebookLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>